<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="wrap_content" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin" tools:context=".MainActivity">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/numero"
        android:id="@+id/textView"
        android:layout_alignParentTop="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:textSize="@dimen/tamanoNumero" />

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textView"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:id="@+id/linearLayout">

        <Button
            android:layout_width="wrap_content"
            android:layout_height="85dp"
            android:text="@string/uno"
            android:id="@+id/button"
            android:longClickable="false"
            android:onClick="boton1" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="85dp"
            android:text="@string/dos"
            android:id="@+id/button2"
            android:onClick="boton1" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="85dp"
            android:text="@string/tres"
            android:id="@+id/button3"
            android:onClick="boton1" />

    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/linearLayout"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:id="@+id/linearLayout2">

        <Button
            android:layout_width="wrap_content"
            android:layout_height="85dp"
            android:text="@string/cuatro"
            android:id="@+id/button4"
            android:onClick="boton1" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="85dp"
            android:text="@string/cinco"
            android:id="@+id/button5"
            android:onClick="boton1" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="85dp"
            android:text="@string/seis"
            android:id="@+id/button6"
            android:onClick="boton1" />
    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/linearLayout2"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:id="@+id/linearLayout3">

        <Button
            android:layout_width="wrap_content"
            android:layout_height="85dp"
            android:text="@string/siete"
            android:id="@+id/button7"
            android:onClick="boton1" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="85dp"
            android:text="@string/ocho"
            android:id="@+id/button8"
            android:layout_gravity="center_horizontal"
            android:onClick="boton1" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="85dp"
            android:text="@string/nueve"
            android:id="@+id/button9"
            android:onClick="boton1" />

    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/linearLayout3"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:id="@+id/linearLayout4">

        <Button
            android:layout_width="wrap_content"
            android:layout_height="85dp"
            android:text="@string/mas"
            android:id="@+id/button10"
            android:background="#877D78"
            android:onClick="boton1" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="85dp"
            android:text="@string/menos"
            android:id="@+id/button11"
            android:background="#877D78"
            android:onClick="boton1" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="85dp"
            android:text="@string/cero"
            android:id="@+id/button12"
            android:onClick="boton1" />
    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/linearLayout4"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true">

        <Button
            android:layout_width="wrap_content"
            android:layout_height="85dp"
            android:text="@string/por"
            android:id="@+id/button13"
            android:background="#877D78"
            android:onClick="boton1" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="85dp"
            android:text="@string/dividir"
            android:id="@+id/button14"
            android:background="#877D78"
            android:onClick="boton1" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="85dp"
            android:text="@string/equal"
            android:id="@+id/button15"
            android:onClick="boton1" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="85dp"
            android:text="@string/ac"
            android:id="@+id/button16"
            android:background="#F3600E"
            android:onClick="boton1" />/>
    </LinearLayout>

</RelativeLayout>
